sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:18: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
    fin + = 1
        ^